# ljenks-chess

./: .gitignore  0.bundle.js  482.index.js  Cargo.toml  README.md  bundle.js  index.html  index.js  index_js.index.js  tq
src/: ai.rs  board.rs  extern_funcs.rs  lib.rs  macros.rs  main.rs
src/ai/: evaluation.rs  mod.rs
src/game/: basic_move_test.rs  bitboard.rs  bitboard_presets.rs  board.rs  castle_utils.rs  check_handler.rs  coords.rs  entities.rs  memo.rs  mod.rs  move_list.rs  move_test.rs  push_moves_handler.rs  searchable_moves.rs
src/www/: index.html  index.js  package-lock.json  package.json
www/: index.html  index.js  loader.js  package-lock.json  package.json  webpack.config.js
