[package]
name = "chess2"
version = "0.1.0"
authors = ["starqi <helloimzirui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
log = "0.4.14"
env_logger = "0.8.2"

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true
